--- a/src/main/resources/AfficherVols.fxml
+++ b/src/main/resources/AfficherVols.fxml
@@ -1,31 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.FlowPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="793.0" prefWidth="1134.0" style="-fx-background-color: transparent;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AfficherVolsController">
+<AnchorPane prefHeight="100.0" prefWidth="1201.0" style="-fx-background-color: transparent;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AfficherVolsController">
     <children>
         <!-- Vue principale de la liste des vols -->
-        <AnchorPane fx:id="mainPane" prefHeight="793.0" prefWidth="1134.0" style="-fx-background-color: #ffebfb; -fx-background-radius: 10;">
+        <AnchorPane fx:id="mainPane" layoutX="-34.0" layoutY="-7.0" prefHeight="100.0" prefWidth="1402.0" style="-fx-background-color: #a0dfe3; -fx-background-radius: 0;">
             <children>
-                <Label layoutX="477.0" layoutY="14.0" text="Liste des Vols" textAlignment="CENTER">
-                    <font>
-                        <Font name="System Bold" size="24.0" />
-                    </font>
-                </Label>
-                <ScrollPane fitToWidth="true" layoutX="31.0" layoutY="56.0" prefHeight="718.0" prefWidth="1053.0" style="-fx-background-color: transparent; -fx-border-color: #039BE5; -fx-border-radius: 5;">
+                <ScrollPane fitToWidth="true" layoutX="63.0" layoutY="104.0" prefHeight="600.0" prefWidth="1314.0" style="-fx-background-color: transparent; -fx-border-radius: 5;">
                     <content>
                         <!-- Utilisation de FlowPane pour organiser les vols horizontalement et automatiquement -->
-                        <FlowPane fx:id="flightsContainer" alignment="TOP_CENTER" hgap="20.0" prefWidth="1051.0" style="-fx-background-color: #ffebfb; -fx-padding: 15;" vgap="20.0">
+                        <FlowPane fx:id="flightsContainer" alignment="TOP_CENTER" hgap="20.0" prefWidth="1051.0" style="-fx-background-color: #a0dfe3; -fx-padding: 15;" vgap="20.0">
                             <!-- Les vols seront ajoutés ici dynamiquement -->
                         </FlowPane>
                     </content>
