--- a/src/main/resources/FlightSearchResults.fxml
+++ b/src/main/resources/FlightSearchResults.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="788.0" prefWidth="1227.0" style="-fx-background-color: #E0F7FA;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.FlightSearchResultsController">
+<AnchorPane prefHeight="788.0" prefWidth="1227.0" style="-fx-background-color: #a0dfe3;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.FlightSearchResultsController">
     <children>
         <Label layoutX="520.0" layoutY="30.0" text="Available Flights" textFill="#006064">
             <font>
@@ -19,7 +19,7 @@
                 <Font size="14.0" />
             </font>
         </Label>
-        <ScrollPane layoutX="150.0" layoutY="112.0" prefHeight="550.0" prefWidth="927.0">
+        <ScrollPane layoutX="150.0" layoutY="109.0" prefHeight="553.0" prefWidth="1068.0">
             <content>
                 <VBox fx:id="flightsContainer" prefWidth="910.0" spacing="15.0" style="-fx-padding: 15;" />
             </content>
