--- a/src/main/resources/Myreservations.fxml
+++ b/src/main/resources/Myreservations.fxml
@@ -1,23 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="788.0" prefWidth="1227.0" style="-fx-background-color: #E0F7FA;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MyReservationsController">
+<AnchorPane fx:id="root" prefHeight="811.0" prefWidth="1321.0" style="-fx-background-color: #a0dfe3;" styleClass="root" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MyReservationsController">
+    <stylesheets>
+        <URL value="@flightstyle.css" />
+    </stylesheets>
     <children>
-        <Label layoutX="520.0" layoutY="30.0" text="Mes Réservations" textFill="#006064">
-            <font>
-                <Font name="System Bold" size="24.0" />
-            </font>
-        </Label>
-        <ScrollPane fitToWidth="true" layoutX="14.0" layoutY="75.0" prefHeight="700.0" prefWidth="1207.0">
+        <ScrollPane fitToWidth="true" layoutX="25.0" layoutY="63.0" prefHeight="702.0" prefWidth="1252.0" style="-fx-background-color: white;" styleClass="scroll-pane">
             <content>
-                <GridPane fx:id="reservationsContainer" hgap="20" style="-fx-padding: 20;" vgap="20">
+                <GridPane fx:id="reservationsContainer" hgap="20" styleClass="grid-pane" vgap="20">
                     <columnConstraints>
                         <ColumnConstraints percentWidth="20.0" />
                         <ColumnConstraints percentWidth="20.0" />
@@ -28,6 +25,6 @@
                 </GridPane>
             </content>
         </ScrollPane>
-        <Button fx:id="backButton" layoutX="150.0" layoutY="700.0" mnemonicParsing="false" onAction="#goBack" prefHeight="35.0" prefWidth="204.0" style="-fx-background-color: #FF9E0C; -fx-text-fill: white; -fx-background-radius: 5;" text="Retour" />
+        <Button fx:id="backButton" layoutX="150.0" layoutY="700.0" mnemonicParsing="false" onAction="#goBack" prefHeight="35.0" prefWidth="204.0" styleClass="pulse-animation" text="Retour" />
     </children>
 </AnchorPane>
