--- a/src/main/java/resources/HistoriqueReservationsHotel.fxml
+++ b/src/main/java/resources/HistoriqueReservationsHotel.fxml
@@ -1,40 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
+<AnchorPane style="-fx-padding: 20;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.HistoriqueReservationsHotelController">
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="controllers.HistoriqueReservationsHotelController"
-            style="-fx-padding: 20;">
-    <!-- Title -->
-    <Label text="Historique de vos réservations"
-           layoutX="20" layoutY="10"
-           style="-fx-font-size: 24px;
-                   -fx-font-weight: bold;
-                   -fx-text-fill: #4e342e;" />
+    <VBox spacing="15" AnchorPane.bottomAnchor="10" AnchorPane.leftAnchor="20" AnchorPane.rightAnchor="20" AnchorPane.topAnchor="10">
 
-    <!-- Table -->
-    <TableView fx:id="table"
-               layoutX="20" layoutY="60"
-               prefWidth="760" prefHeight="400"
-               style="-fx-background-color: rgba(255,255,255,0.85);
-                      -fx-border-radius: 16;
-                      -fx-background-radius: 16;
-                      -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.25), 10, 0, 0, 4);">
+        <!-- Title -->
+        <Label style="-fx-font-size: 24px; -fx-font-weight: bold; -fx-text-fill: #4e342e;" text="Historique de vos réservations" />
 
-        <columns>
-            <TableColumn fx:id="hotelNameCol" text="Nom de l'hôtel" prefWidth="200"
-                         style="-fx-font-weight: bold; -fx-alignment: CENTER_LEFT;"/>
-            <TableColumn fx:id="colPrixTotal" text="Prix Total" prefWidth="200"
-                         style="-fx-font-weight: bold; -fx-alignment: LEFT;"/>
-            <TableColumn fx:id="checkinCol"    text="Arrivée"       prefWidth="120"
-                         style="-fx-font-weight: bold; -fx-alignment: LEFT;"/>
-            <TableColumn fx:id="checkoutCol"   text="Départ"        prefWidth="120"
-                         style="-fx-font-weight: bold; -fx-alignment: LEFT;"/>
-            <TableColumn fx:id="hotelPriceCol" text="Prix par nuit" prefWidth="200"
-                         style="-fx-font-weight: bold; -fx-alignment: LEFT;"/>
-        </columns>
-    </TableView>
+        <!-- Table -->
+        <TableView fx:id="table" prefHeight="350" style="-fx-background-color: rgba(255,255,255,0.85); -fx-border-radius: 16; -fx-background-radius: 16; -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.25), 10, 0, 0, 4);" VBox.vgrow="ALWAYS">
+            <columns>
+                <TableColumn fx:id="hotelNameCol" prefWidth="200" text="Nom de l'hôtel" />
+                <TableColumn fx:id="colPrixTotal" prefWidth="200" text="Prix Total" />
+                <TableColumn fx:id="checkinCol" prefWidth="120" text="Arrivée" />
+                <TableColumn fx:id="checkoutCol" prefWidth="120" text="Départ" />
+                <TableColumn fx:id="hotelPriceCol" prefWidth="128" text="Prix par nuit" />
+                <TableColumn fx:id="statusCol" prefWidth="101" text="Status" />
+            </columns>
+        </TableView>
+
+        <!-- Button -->
+        <Button fx:id="generateReceiptButton" onAction="#generateReceipt" prefHeight="25.0" prefWidth="237.0" style="-fx-background-color: #4e342e; -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 8;" text="Download your Receipt">
+         <font>
+            <Font size="17.0" />
+         </font></Button>
+
+    </VBox>
 </AnchorPane>
