--- a/src/main/resources/CatalogueVehicules.fxml
+++ b/src/main/resources/CatalogueVehicules.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
@@ -9,9 +10,8 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.TilePane?>
 <?import javafx.scene.layout.VBox?>
-<?import java.net.URL?>
 
-<BorderPane fx:id="rootPane" prefHeight="700.0" prefWidth="760.0" styleClass="root-pane" xmlns="http://javafx.com/javafx/21.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.CatalogueVehiculesController">
+<BorderPane fx:id="rootPane" prefHeight="533.0" prefWidth="760.0" styleClass="root-pane" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.CatalogueVehiculesController">
     <stylesheets>
         <URL value="@/styles/med.css" />
         <URL value="@/styles/admin-common.css" />
@@ -29,7 +29,7 @@
         </HBox>
     </top>
     <center>
-        <TilePane fx:id="vehiclePane" hgap="10" prefHeight="500.0" prefWidth="560.0" styleClass="tile-pane" vgap="10" BorderPane.alignment="CENTER" />
+        <TilePane fx:id="vehiclePane" hgap="10" prefHeight="387.0" prefWidth="760.0" styleClass="tile-pane" vgap="10" BorderPane.alignment="CENTER" />
     </center>
     <bottom>
         <HBox alignment="CENTER" spacing="10" styleClass="search-pane">
@@ -49,9 +49,9 @@
         </HBox>
     </bottom>
     <right>
-        <VBox fx:id="formContainer" prefWidth="200.0" visible="false" managed="false" styleClass="form-container">
+        <VBox fx:id="formContainer" managed="false" prefWidth="200.0" styleClass="form-container" visible="false">
             <padding>
-                <Insets top="10" right="10" bottom="10" left="10" />
+                <Insets bottom="10" left="10" right="10" top="10" />
             </padding>
         </VBox>
     </right>
